feat(backend): 新增知识库管理
