# internal/models/ent/client.go
@@ -15,6 +15,7 @@ import (
 	"entgo.io/ent"
 	"entgo.io/ent/dialect"
 	"entgo.io/ent/dialect/sql"
+	"github.com/Sesame2/go-admin/internal/models/ent/knowledgebase"
 	"github.com/Sesame2/go-admin/internal/models/ent/user"
 )
 
@@ -23,6 +24,8 @@ type Client struct {
 	config
 	// Schema is the client for creating, migrating and dropping schema.
 	Schema *migrate.Schema
+	// KnowledgeBase is the client for interacting with the KnowledgeBase builders.
+	KnowledgeBase *KnowledgeBaseClient
 	// User is the client for interacting with the User builders.
 	User *UserClient
 }
@@ -36,6 +39,7 @@ func NewClient(opts ...Option) *Client {
 
 func (c *Client) init() {
 	c.Schema = migrate.NewSchema(c.driver)
+	c.KnowledgeBase = NewKnowledgeBaseClient(c.config)
 	c.User = NewUserClient(c.config)
 }
 
@@ -127,9 +131,10 @@ func (c *Client) Tx(ctx context.Context) (*Tx, error) {
 	cfg := c.config
 	cfg.driver = tx
 	return &Tx{
-		ctx:    ctx,
-		config: cfg,
-		User:   NewUserClient(cfg),
+		ctx:           ctx,
+		config:        cfg,
+		KnowledgeBase: NewKnowledgeBaseClient(cfg),
+		User:          NewUserClient(cfg),
 	}, nil
 }
 
@@ -147,16 +152,17 @@ func (c *Client) BeginTx(ctx context.Context, opts *sql.TxOptions) (*Tx, error) 
 	cfg := c.config
 	cfg.driver = &txDriver{tx: tx, drv: c.driver}
 	return &Tx{
-		ctx:    ctx,
-		config: cfg,
-		User:   NewUserClient(cfg),
+		ctx:           ctx,
+		config:        cfg,
+		KnowledgeBase: NewKnowledgeBaseClient(cfg),
+		User:          NewUserClient(cfg),
 	}, nil
 }
 
 // Debug returns a new debug-client. It's used to get verbose logging on specific operations.
 //
 //	client.Debug().
-//		User.
+//		KnowledgeBase.
 //		Query().
 //		Count(ctx)
 func (c *Client) Debug() *Client {
@@ -178,22 +184,159 @@ func (c *Client) Close() error {
 // Use adds the mutation hooks to all the entity clients.
 // In order to add hooks to a specific client, call: `client.Node.Use(...)`.
 func (c *Client) Use(hooks ...Hook) {
+	c.KnowledgeBase.Use(hooks...)
 	c.User.Use(hooks...)
 }
 
 // Intercept adds the query interceptors to all the entity clients.
 // In order to add interceptors to a specific client, call: `client.Node.Intercept(...)`.
 func (c *Client) Intercept(interceptors ...Interceptor) {
+	c.KnowledgeBase.Intercept(interceptors...)
 	c.User.Intercept(interceptors...)
 }
 
 // Mutate implements the ent.Mutator interface.
 func (c *Client) Mutate(ctx context.Context, m Mutation) (Value, error) {
 	switch m := m.(type) {
+	case *KnowledgeBaseMutation:
+		return c.KnowledgeBase.mutate(ctx, m)
 	case *UserMutation:
 		return c.User.mutate(ctx, m)
 	default:
 		return nil, fmt.Errorf("ent: unknown mutation type %T", m)
+	}
+}
+
+// KnowledgeBaseClient is a client for the KnowledgeBase schema.
+type KnowledgeBaseClient struct {
+	config
+}
+
+// NewKnowledgeBaseClient returns a client for the KnowledgeBase from the given config.
+func NewKnowledgeBaseClient(c config) *KnowledgeBaseClient {
+	return &KnowledgeBaseClient{config: c}
+}
+
+// Use adds a list of mutation hooks to the hooks stack.
+// A call to `Use(f, g, h)` equals to `knowledgebase.Hooks(f(g(h())))`.
+func (c *KnowledgeBaseClient) Use(hooks ...Hook) {
+	c.hooks.KnowledgeBase = append(c.hooks.KnowledgeBase, hooks...)
+}
+
+// Intercept adds a list of query interceptors to the interceptors stack.
+// A call to `Intercept(f, g, h)` equals to `knowledgebase.Intercept(f(g(h())))`.
+func (c *KnowledgeBaseClient) Intercept(interceptors ...Interceptor) {
+	c.inters.KnowledgeBase = append(c.inters.KnowledgeBase, interceptors...)
+}
+
+// Create returns a builder for creating a KnowledgeBase entity.
+func (c *KnowledgeBaseClient) Create() *KnowledgeBaseCreate {
+	mutation := newKnowledgeBaseMutation(c.config, OpCreate)
+	return &KnowledgeBaseCreate{config: c.config, hooks: c.Hooks(), mutation: mutation}
+}
+
+// CreateBulk returns a builder for creating a bulk of KnowledgeBase entities.
+func (c *KnowledgeBaseClient) CreateBulk(builders ...*KnowledgeBaseCreate) *KnowledgeBaseCreateBulk {
+	return &KnowledgeBaseCreateBulk{config: c.config, builders: builders}
+}
+
+// MapCreateBulk creates a bulk creation builder from the given slice. For each item in the slice, the function creates
+// a builder and applies setFunc on it.
+func (c *KnowledgeBaseClient) MapCreateBulk(slice any, setFunc func(*KnowledgeBaseCreate, int)) *KnowledgeBaseCreateBulk {
+	rv := reflect.ValueOf(slice)
+	if rv.Kind() != reflect.Slice {
+		return &KnowledgeBaseCreateBulk{err: fmt.Errorf("calling to KnowledgeBaseClient.MapCreateBulk with wrong type %T, need slice", slice)}
+	}
+	builders := make([]*KnowledgeBaseCreate, rv.Len())
+	for i := 0; i < rv.Len(); i++ {
+		builders[i] = c.Create()
+		setFunc(builders[i], i)
+	}
+	return &KnowledgeBaseCreateBulk{config: c.config, builders: builders}
+}
+
+// Update returns an update builder for KnowledgeBase.
+func (c *KnowledgeBaseClient) Update() *KnowledgeBaseUpdate {
+	mutation := newKnowledgeBaseMutation(c.config, OpUpdate)
+	return &KnowledgeBaseUpdate{config: c.config, hooks: c.Hooks(), mutation: mutation}
+}
+
+// UpdateOne returns an update builder for the given entity.
+func (c *KnowledgeBaseClient) UpdateOne(kb *KnowledgeBase) *KnowledgeBaseUpdateOne {
+	mutation := newKnowledgeBaseMutation(c.config, OpUpdateOne, withKnowledgeBase(kb))
+	return &KnowledgeBaseUpdateOne{config: c.config, hooks: c.Hooks(), mutation: mutation}
+}
+
+// UpdateOneID returns an update builder for the given id.
+func (c *KnowledgeBaseClient) UpdateOneID(id uuid.UUID) *KnowledgeBaseUpdateOne {
+	mutation := newKnowledgeBaseMutation(c.config, OpUpdateOne, withKnowledgeBaseID(id))
+	return &KnowledgeBaseUpdateOne{config: c.config, hooks: c.Hooks(), mutation: mutation}
+}
+
+// Delete returns a delete builder for KnowledgeBase.
+func (c *KnowledgeBaseClient) Delete() *KnowledgeBaseDelete {
+	mutation := newKnowledgeBaseMutation(c.config, OpDelete)
+	return &KnowledgeBaseDelete{config: c.config, hooks: c.Hooks(), mutation: mutation}
+}
+
+// DeleteOne returns a builder for deleting the given entity.
+func (c *KnowledgeBaseClient) DeleteOne(kb *KnowledgeBase) *KnowledgeBaseDeleteOne {
+	return c.DeleteOneID(kb.ID)
+}
+
+// DeleteOneID returns a builder for deleting the given entity by its id.
+func (c *KnowledgeBaseClient) DeleteOneID(id uuid.UUID) *KnowledgeBaseDeleteOne {
+	builder := c.Delete().Where(knowledgebase.ID(id))
+	builder.mutation.id = &id
+	builder.mutation.op = OpDeleteOne
+	return &KnowledgeBaseDeleteOne{builder}
+}
+
+// Query returns a query builder for KnowledgeBase.
+func (c *KnowledgeBaseClient) Query() *KnowledgeBaseQuery {
+	return &KnowledgeBaseQuery{
+		config: c.config,
+		ctx:    &QueryContext{Type: TypeKnowledgeBase},
+		inters: c.Interceptors(),
+	}
+}
+
+// Get returns a KnowledgeBase entity by its id.
+func (c *KnowledgeBaseClient) Get(ctx context.Context, id uuid.UUID) (*KnowledgeBase, error) {
+	return c.Query().Where(knowledgebase.ID(id)).Only(ctx)
+}
+
+// GetX is like Get, but panics if an error occurs.
+func (c *KnowledgeBaseClient) GetX(ctx context.Context, id uuid.UUID) *KnowledgeBase {
+	obj, err := c.Get(ctx, id)
+	if err != nil {
+		panic(err)
+	}
+	return obj
+}
+
+// Hooks returns the client hooks.
+func (c *KnowledgeBaseClient) Hooks() []Hook {
+	return c.hooks.KnowledgeBase
+}
+
+// Interceptors returns the client interceptors.
+func (c *KnowledgeBaseClient) Interceptors() []Interceptor {
+	return c.inters.KnowledgeBase
+}
+
+func (c *KnowledgeBaseClient) mutate(ctx context.Context, m *KnowledgeBaseMutation) (Value, error) {
+	switch m.Op() {
+	case OpCreate:
+		return (&KnowledgeBaseCreate{config: c.config, hooks: c.Hooks(), mutation: m}).Save(ctx)
+	case OpUpdate:
+		return (&KnowledgeBaseUpdate{config: c.config, hooks: c.Hooks(), mutation: m}).Save(ctx)
+	case OpUpdateOne:
+		return (&KnowledgeBaseUpdateOne{config: c.config, hooks: c.Hooks(), mutation: m}).Save(ctx)
+	case OpDelete, OpDeleteOne:
+		return (&KnowledgeBaseDelete{config: c.config, hooks: c.Hooks(), mutation: m}).Exec(ctx)
+	default:
+		return nil, fmt.Errorf("ent: unknown KnowledgeBase mutation op: %q", m.Op())
 	}
 }
 
@@ -333,9 +476,9 @@ func (c *UserClient) mutate(ctx context.Context, m *UserMutation) (Value, error)
 // hooks and interceptors per client, for fast access.
 type (
 	hooks struct {
-		User []ent.Hook
+		KnowledgeBase, User []ent.Hook
 	}
 	inters struct {
-		User []ent.Interceptor
+		KnowledgeBase, User []ent.Interceptor
 	}
 )
